# Vulkan2DRenderer

./: .editorconfig  .gitignore  .gitmodules  Build.bat  Build.py  Build.sh  Build_VisualStudio2017.bat  Build_VisualStudio2019.bat  CMakeLists.txt  LICENCE.md  LICENSE.md  README.md  Vulkan2DRenderer.sln
Docs/: CMakeLists.txt
Docs/Doxygen/: vk2d.Doxyfile.in
Docs/Pages/: 01_mainpage.md  02_getting_started.md  03_examples.doc  10_compiling.md  10_compiling_using_build_tool.md  11_compiling_using_cmake.md
DocsSource/: CMakeLists.txt
DocsSource/CMake/: FindSphinx.cmake
DocsSource/Doxygen/: vk2d.Doxyfile.in
DocsSource/Sphinx/: conf.py  index.rst
DocsSource/Sphinx/Classes/: Instance.rst  InstanceImpl.rst  index.rst
DocsSource/Sphinx/Enums/: ReportSeverity.rst  index.rst
DocsSource/Sphinx/Introduction/: GettingStarted.rst  OverallStructure.rst  index.rst
DocsSource/Sphinx/Macros/: index.rst
DocsSource/Sphinx/_static/: style.css
Examples/: CMakeLists.txt  DrawMeshShapes.cpp  DrawSimpleShapes.cpp  EventHandler.cpp  HelloWorld.cpp  LibraryBuildingSandbox.cpp  MultipleWindows.cpp  RenderTargetTextures.cpp  Transformations.cpp
ExternalLibraries/: Build_VisualStudio2019.bat  Build_VisualStudio2019_Backup.bat  CMakeLists.txt  cmake_VisualStudio2019.bat
ExternalLibraries/glfw-3.3-VisualStudio2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
ExternalLibraries/glfw-3.3-VisualStudio2019/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  glfw_config.h
ExternalLibraries/stb/: LICENSE.md
ExternalSubmodules/: CMakeLists.txt
Include/: VK2D.h  Vulkan2DRenderer.h
Include/Core/: BuildOptions.h  Common.h  Platform.h  SynchronizedObject.hpp  SystemConsole.h  Version.hpp
Include/Interface/: FontResource.h  Handle.hpp  Instance.h  Mesh.h  RenderPrimitives.h  RenderTargetCommon.hpp  RenderTargetTexture.h  Renderer.h  Resource.h  ResourceManager.h  Sampler.h  Texture.h  TextureResource.h  Window.h
Include/Types/: Array.hpp  BlurType.h  Color.h  Color.hpp  Matrix2.h  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Mesh.h  MeshNew.h  MeshPrimitives.hpp  Multisamples.h  Rect2.h  Rect2.hpp  RenderCoordinateSpace.hpp  StreamOps.h  Text.h  Transform.h  Vector2.h  Vector2.hpp  Vector3.hpp  Vector4.hpp
Include/VK2D/: BuildOptions.h  Common.h  Platform.h  RenderPrimitives.h  Renderer.h  Resource.h  ResourceManager.h  TextureResource.h  Window.h
Packaging/: CMakeLists.txt  Linux(debian).txt  Windows.txt  WindowsInstaller.txt
Shaders/: RenderTargetTextureBlur.vert  TriangleMultitextured.frag  TriangleMultitextured.vert
Shaders/Spir-V/: MultitexturedFragmentPoint.frag.spv.h  RenderTargetTexture_BoxBlur_Horisontal.frag.spv.h  RenderTargetTexture_BoxBlur_Vertical.frag.spv.h  RenderTargetTexture_GaussianBlur_Vertical.frag.spv.h  SingleTexturedFragment.frag.spv.h  SingleTexturedVertex.vert.spv.h
Source/: BuildOptions.h
Source/Core/: Common.cpp  CommonTools.cpp  DescriptorSet.cpp  MeshBuffer.cpp  PreCompiledHeader.h  QueueResolver.cpp  ShaderInterface.cpp  SourceCommon.cpp  SourceCommon.h  SystemConsole.cpp  ThreadPool.cpp  ThreadPrivateResources.cpp  VulkanMemoryManagement.cpp
Source/Header/: DescriptorSet.h  MeshBuffer.h  QueueResolver.h  RendererDataImpl.h  RendererImpl.h  ResourceImpl.h  ResourceManagerImpl.h  SourceCommon.h  TextureResourceImpl.h  ThreadPool.h  ThreadPrivateResources.h  VulkanMemoryManagement.h  WindowDataImpl.h  WindowImpl.h
Source/Impl/: FontResourceImpl.cpp  InstanceImpl.cpp  RenderTargetCommonImpl.cpp  RenderTargetTextureImpl.cpp  RendererImpl.cpp  ResourceManagerImpl.cpp  SamplerImpl.cpp  TextureImpl.cpp  TextureResourceImpl.cpp  WindowImpl.cpp
Source/Interface/: FontResource.cpp  Instance.cpp  InstanceImpl.h  Mesh.cpp  RenderTargetTexture.cpp  RenderTargetTextureImpl.h  Renderer.cpp  Resource.cpp  ResourceManager.cpp  Sampler.cpp  SamplerImpl.h  Texture.cpp  TextureImpl.h  TextureResource.cpp  Window.cpp  WindowImpl.h
Source/Shaders/: EntrypointNames.txt  RenderTargetBlur.comp  RenderTargetTextureBlur.frag  SingleTextured.frag  SingleTextured.vert  TriangleMultitextured.frag  TriangleMultitextured.vert  shader.frag  shader.frag.spv.h  shader.vert  shader.vert.spv.h
Source/System/: CommonTools.cpp  CommonTools.h  DescriptorSet.cpp  DescriptorSet.h  ImageFormatConverter.hpp  MeshBuffer.cpp  MeshBuffer.h  QueueResolver.cpp  QueueResolver.h  RenderTargetTextureDependecyGraphInfo.hpp  RenderTargetTextureDependencyGraphInfo.cpp  ThreadPool.h  (+8 more)
Tests/: BasicRender.cpp  CMakeLists.txt  ContainerArray.cpp  DrawShapes.cpp  DrawShapesRenderTestSamples.h  LibraryBuildingSandbox.cpp  TestCommon.cpp  TestCommon.h
Tests/Test01/: Main.cpp  Test01.vcxproj
Tests/Testbed/: Testbed.cpp
Tools/: Build_VisualStudio2019_Backup.bat  CMakeLists.txt
Tools/CompileGLSLShadersToSpir-V/: CMakeLists.txt  CompileGLSLShadersToSpir-V.vcxproj  Main.cpp
Vulkan2DRenderer/: RCb21736  Vulkan2DRenderer.vcxproj  Vulkan2DRenderer.vcxproj.filters  cpp.hint
docs/: CMakeLists.txt
docs/doxygen/: vk2d.Doxyfile.in
docs/images/: SamplerLODBias.apng  SamplerMaxAnisotropy.apng
docs/pages/: 01_mainpage.md
examples/: CMakeLists.txt  DrawMeshShapes.cpp  EventHandler.cpp  HelloWorld.cpp  LibraryBuildingSandbox.cpp  MultipleWindows.cpp  RenderTargetTextures.cpp  Transformations.cpp
examples_/: CMakeLists.txt  DrawMeshShapes.cpp  LibraryBuildingSandbox.cpp
external_submodules/: CMakeLists.txt
include/: VK2D.h  VK2D.hpp
packaging/: Windows.txt
packaging_/: CMakeLists.txt
shaders/: MeshShaderBase.frag  MeshShaderBase.vert  SingleTextured.frag  SingleTextured.vert  TriangleMultitextured.frag  TriangleMultitextured.vert
src/: BuildOptions.hpp
tests/: BasicRender.cpp  CMakeLists.txt  DrawShapes.cpp
tests/testbed/: Testbed.h
tests_/: ContainerArray.cpp
tools/compile_glsl_shaders_to_spir-v/: CMakeLists.txt
(+446 files in other folders)
